fix: coins table overflowing

--- a/src/app/components/coins-table/coins-table.component.scss
+++ b/src/app/components/coins-table/coins-table.component.scss
@@ -1,4 +1,13 @@
 .mat-mdc-form-field {
-  font-size: 14px;
+  font-size: 1.4rem;
   width: 100%;
+}
+
+.wrapper {
+  max-height: 40rem;
+}
+
+td,
+th {
+  width: 25%;
 }
